tech-podolae-ambulance/ambulance-webapi-tech-podolae/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-podolae-ambulance-webapi
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: tech-podolae-ambulance-webapi-label
  template:
    metadata:
      labels:
        pod: tech-podolae-ambulance-webapi-label
    spec:
      containers:
        - name: tech-podolae-ambulance-webapi-container
          image: silentstorm1406/ambulance-webapi-ambulance-webapi-tech-podolae:1.0.0-40
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
