tech-podolae-ambulance/ambulance-webapi-tech-podolae/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tech-podolae-ambulance-webapi
spec:
  type: ClusterIP
  selector:
    pod: tech-podolae-ambulance-webapi-label
  ports:
    - name: webapi-s-port
      protocol: TCP
      port: 80
      targetPort: 8080
