tech-podolae-ambulance/ambulance-webapi-tech-podolae/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-podolae-ambulance-webapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: wac-hospital
  rules:
    - http:
        paths:
          - path: /xkollarovap-doctor-schedule-list-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: tech-podolae-ambulance-webapi
                port:
                  name: webapi-s-port
